--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ h2 {
 }
 
 input {
+    align-items: center;
+    align-content: center;
     font-size: medium;
     width: 90%;
     padding: 10px;
@@ -47,7 +49,6 @@ input {
 
 .input {
     margin: 10px;
-
 }
 
 button {
@@ -57,6 +58,10 @@ button {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+}
+
+button:disabled {
+    cursor: default;
 }
 
 .resultado {
